# Python-Chatnik

./: .gitignore  README-work.md  README.md  pyproject.toml
Chatnik/: __init__.py  cli.py  core.py
